[boxinggloves] Fixed loading screen overflow

--- a/boxinggloves/assets/themes/boxxerworld/style.css
+++ b/boxinggloves/assets/themes/boxxerworld/style.css
@@ -8,8 +8,12 @@ body{
     font-family: 'Poppins', sans-serif;
     height: auto;
     min-height: 100%;
-    overflow: visible;
     background: none;
+    overflow: hidden;
+}
+
+.cndce-container.loaded{
+    overflow: visible;
 }
 
 .cndce-container canvas{
